[gd_scene load_steps=7 format=3 uid="uid://d1yogmjhyl232"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_c1sec"]
[ext_resource type="Texture2D" uid="uid://b8nrmpodbv1bv" path="res://sprites/player_new.png" id="2_ebeo3"]
[ext_resource type="PackedScene" uid="uid://cdn4wr24v2nc3" path="res://scenes/guns/pistol.tscn" id="3_80vtd"]
[ext_resource type="Theme" uid="uid://cpxca4qeaggbs" path="res://ui_theme.tres" id="4_30nog"]
[ext_resource type="Texture2D" uid="uid://bo5rg6rbxavr6" path="res://sprites/neutral_point_light.png" id="5_0wfc8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1x6a"]
size = Vector2(16, 16)

[node name="Player" type="CharacterBody2D"]
position = Vector2(4, 0)
script = ExtResource("1_c1sec")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_p1x6a")

[node name="RotationPoint" type="Node2D" parent="."]
position = Vector2(-4, 0)

[node name="PlayerSprite" type="Sprite2D" parent="RotationPoint"]
texture_filter = 1
texture_repeat = 1
position = Vector2(3, 4.76837e-07)
rotation = 1.5708
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ebeo3")

[node name="Gun" parent="RotationPoint" instance=ExtResource("3_80vtd")]
position = Vector2(10, 0)

[node name="Healthbar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = -8.0
grow_horizontal = 2
theme = ExtResource("4_30nog")
value = 50.0
show_percentage = false

[node name="TurnWaitTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.796078, 0.427451, 1)
energy = 1.54
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("5_0wfc8")
